# oxideav-theora

./: CHANGELOG.md  Cargo.toml  README.md
src/: bitreader.rs  block.rs  coded_order.rs  dct.rs  decoder.rs  encoder.rs  encoder_huffman.rs  fdct.rs  fixture_data.rs  huffman.rs  inter.rs  lib.rs  quant.rs  vp31_huffman_data.rs
src/headers/: comment.rs  identification.rs  mod.rs  setup.rs
tests/: docs_corpus.rs  encoded-corpus-notes.md  encoded_corpus.rs  encoder_round_trip.rs  reference_clips.rs
