[package]
name = "oxideav-theora"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure-Rust Theora video decoder for oxideav (headers + I-frame decode)"

readme = "README.md"
homepage.workspace = true
keywords = ["multimedia", "video", "theora", "ogg", "codec"]
categories = ["multimedia::encoding", "multimedia::video"]

[dependencies]
oxideav-core = { workspace = true }
oxideav-codec = { workspace = true }
