[package]
name = "oxideav-theora"
version = "0.0.3"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-theora"
authors = ["Mark Karpeles"]
description = "Pure-Rust Theora video codec for oxideav (decode + encode, I + P frames, 4:2:0 / 4:2:2 / 4:4:4)"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-theora"
keywords = ["multimedia", "video", "theora", "ogg", "codec"]
categories = ["multimedia::encoding", "multimedia::video"]

[dependencies]
oxideav-core = "0.1"
oxideav-codec = "0.1"