[package]
name = "oxideav-theora"
version = "0.0.10"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-theora"
authors = ["Mark Karpeles"]
description = "Pure-Rust Theora video codec — orphan-rebuild scaffold pending clean-room re-implementation."

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-theora"
keywords = ["multimedia", "video", "theora", "codec", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::video"]

[dependencies]
oxideav-core = "0.1"
